@@ -141,6 +141,7 @@ class Playlist : private KListView, public EngineObserver
         void columnOrderChanged();
         void updateNextPrev();
         void queue( QListViewItem* );
+        void stopAfterCurrent( bool shoudStop );
         void activate( QListViewItem* );
         void columnResizeEvent( int, int, int );
 
@@ -207,6 +208,7 @@ class Playlist : private KListView, public EngineObserver
         uint         m_undoCounter;
 
         KURL::List   m_queueList;
+        bool         m_stopAfterCurrent;
         
         //text before inline editing ( the new tag is written only if it's changed )
         QString m_editOldTag;
